# syar

./: .gitignore  .vercelignore  Cargo.toml  Dioxus.toml  package.json  tailwind.css  vercel.json
.github/workflows/: deploy.yml
assets/: tailwind.css
src/: main.rs  models.rs  router.rs
src/components/: button.rs  filter_pill.rs  layout.rs  mod.rs  product_card.rs  wishlist_button.rs
src/components/navbar/: desktop.rs  mobile.rs  mod.rs
src/pages/: mod.rs  shop.rs
src/pages/home/: features.rs  hero.rs  mod.rs
src/pages/product_detail/: components.rs  mod.rs
src/pages/wishlist/: item_card.rs  mod.rs
