[package]
name = "SYAR"
version = "0.1.0"
authors = ["kagesyntax <em2009manu2010el@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.10.0", features = ["hero-icons-solid", "hero-icons-outline"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
